@@ -1,5 +1,11 @@
 2007-03-13  Scott James Remnant  <scott@netsplit.com>
 
+	* init/cfgfile.c (cfg_watch_dir): We get ENOSYS for missing inotify
+	support, not EOPNOTSUPP.
+	* init/tests/test_cfgfile.c (test_watch_dir): Actually make the
+	directory tree before testing for inotify, since we use the same
+	tree there too.
+
 	* util/initctl.c (job_info_output): Restructure so gcc doesn't think
 	name can be used uninitialised.
 	* init/tests/test_cfgfile.c (test_watch_dir): Correct an error where
